tests/baselines/reference/objectCreate-errors.errors.txt
tests/cases/compiler/objectCreate-errors.ts(1,24): error TS2345: Argument of type '1' is not assignable to parameter of type '实例 | 空值'.
tests/cases/compiler/objectCreate-errors.ts(2,24): error TS2345: Argument of type '"string"' is not assignable to parameter of type '实例 | 空值'.
tests/cases/compiler/objectCreate-errors.ts(3,24): error TS2345: Argument of type '为假' is not assignable to parameter of type '实例 | 空值'.
tests/cases/compiler/objectCreate-errors.ts(4,24): error TS2345: Argument of type '未定' is not assignable to parameter of type '实例 | 空值'.
tests/cases/compiler/objectCreate-errors.ts(7,24): error TS2345: Argument of type '1' is not assignable to parameter of type '实例 | 空值'.
tests/cases/compiler/objectCreate-errors.ts(8,24): error TS2345: Argument of type '"string"' is not assignable to parameter of type '实例 | 空值'.
tests/cases/compiler/objectCreate-errors.ts(9,24): error TS2345: Argument of type '为假' is not assignable to parameter of type '实例 | 空值'.
tests/cases/compiler/objectCreate-errors.ts(10,24): error TS2345: Argument of type '未定' is not assignable to parameter of type '实例 | 空值'.


==== tests/cases/compiler/objectCreate-errors.ts (8 errors) ====
    var e1 = Object.create(1);               // Error
                           ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type '实例 | 空值'.
    var e2 = Object.create("string");        // Error
                           ~~~~~~~~
!!! error TS2345: Argument of type '"string"' is not assignable to parameter of type '实例 | 空值'.
    var e3 = Object.create(false);           // Error
                           ~~~~~
!!! error TS2345: Argument of type '为假' is not assignable to parameter of type '实例 | 空值'.
    var e4 = Object.create(undefined);       // Error
                           ~~~~~~~~~
!!! error TS2345: Argument of type '未定' is not assignable to parameter of type '实例 | 空值'.
    
     
    var e5 = Object.create(1, {});           // Error
                           ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type '实例 | 空值'.
    var e6 = Object.create("string", {});    // Error
                           ~~~~~~~~
!!! error TS2345: Argument of type '"string"' is not assignable to parameter of type '实例 | 空值'.
    var e7 = Object.create(false, {});       // Error
                           ~~~~~
!!! error TS2345: Argument of type '为假' is not assignable to parameter of type '实例 | 空值'.
    var e8 = Object.create(undefined, {});   // Error
                           ~~~~~~~~~
!!! error TS2345: Argument of type '未定' is not assignable to parameter of type '实例 | 空值'.